<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/expense_description"
            android:textSize="20dp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutQuantity_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_amount_expense"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/expense_amount"
            android:textSize="20dp"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
        android:id = "@+id/radio_group_expense_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/radio_travel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text= "@string/travel"
            android:textSize="20dp"/>
        <RadioButton
            android:id="@+id/radio_salary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/salary"
            android:textSize="20dp"
            />
        <RadioButton
            android:id="@+id/radio_resource"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/type_resource"
            android:textSize="20dp"/>
        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/type_other"
            android:textSize="20dp"/>

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_expense_selectStaff"
        android:layout_width="match_parent"
        android:layout_height="40dp"></Spinner>

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save_button"
        android:textSize="20dp"/>

</LinearLayout>